--- a/package.json
+++ b/package.json
@@ -1,26 +1,9 @@
 {
-  "name": "reactjs",
-  "version": "1.0.0",
-  "description": "Test av reactjs",
+  "name": "react-tutorials",
+  "version": "0.0.0",
+  "description": "",
   "main": "webpack.config.js",
-  "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "set NODE_ENV=production && webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/artcups/reactjs.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/artcups/reactjs/issues"
-  },
-  "homepage": "https://github.com/artcups/reactjs#readme",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.4",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -29,12 +12,17 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "flux": "^2.1.1",
-    "history": "^2.0.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-router": "^2.0.1",
-    "webpack": "^1.12.14",
+    "redux": "^3.5.2",
+    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
