--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {},
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
+    "prod": "webpack --prod --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
