--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tutorials",
+  "name": "react",
   "version": "0.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -21,7 +21,6 @@
   "devDependencies": {},
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
-    "prod": "webpack --prod --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
